# NPB

NPB-OLD/: bench.py
NPB-OLD/NPB-OMP/CG/: cg.cpp  npbparams.hpp
NPB-OLD/NPB-OMP/EP/: ep.cpp  npbparams.hpp
NPB-OLD/NPB-OMP/IS/: is.cpp  npbparams.hpp
NPB-OLD/NPB-OMP/config/: make.def
NPB-OLD/NPB-OMP/sys/: setparams
NPB-OLD/NPB-TBB/CG/: cg.cpp  npbparams.hpp
NPB-OLD/NPB-TBB/config/: make.def
NPB-OLD/NPB-TBB/sys/: setparams  setparams.cpp
NPB-Rust/: Makefile  analyze_quality.py  bench.py  benchmark_direct.sh
NPB-Rust/common/src/: print_results.rs  rust_timers.rs
NPB-Rust/src/templates/: cg-pp.rs  cg.rs  ep-pp.rs  is.rs  tmp1  tmp2
concurrent/: bench_echo.py  bench_pr.py
concurrent/benchmark_results_echo/: analyze.py  benchmark_results_20250609_234211.csv  benchmark_summary.json
concurrent/benchmark_results_producer/: analyze.py  benchmark_results_20250609_221720.csv
concurrent/cpp/echo/: CMakeLists.txt  main.cpp
concurrent/cpp/producer_consumer/: CMakeLists.txt  main.cpp
concurrent/rust/echo_benchmark/: Cargo.toml
concurrent/rust/echo_benchmark/src/: main.rs
concurrent/rust/producer_consumer_benchmark/: Cargo.toml  bench.py
concurrent/rust/producer_consumer_benchmark/src/: main.rs
master_t_parallel_c/: CMakeLists.txt  README.md  bench.py  cg.cpp  cg.hpp  main.cpp  utils.cpp  utils.hpp
master_t_parallel_c/CG/: CMakeLists.txt  README.md  cg.cpp  cg.hpp  main.cpp  utils.hpp
master_t_parallel_c/EP/: CMakeLists.txt  ep.cpp  ep.hpp  main.cpp  utils.cpp  utils.hpp
master_t_parallel_c/IS/: CMakeLists.txt  fortran_style_is.cpp  is.cpp  is.hpp  main.cpp  utils.hpp
